# AstraWeave

./: .editor_preferences.json  .gitattributes  .gitignore  404.html  CAMPAIGN_NOTES.md  CAMPAIGN_PROGRESS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  HANDOFF_HISTORY.md  LOD_VIEWPORT_AUDIT_REPORT.md  README.md  aw_editor_full_output.txt  brush-dbg-r4.txt  brush-dbg-r5.txt  brush-dbg-r6.txt  brush-dbg-r8-filtered.txt  editor_run_output.txt  index.html  mountain_debug.txt  mountain_test_result.txt  print.html  searcher-c2a407aa.js  sitemap.xml  test_mountain.rs  toc-3cd98da5.js  toc.html
astraweave-asset/: Cargo.toml
astraweave-asset/src/: lib.rs  mutation_tests.rs  nanite_preprocess.rs
astraweave-asset/tests/: gltf_loading_tests.rs
astraweave-camera/: Cargo.toml  README.md
astraweave-camera/src/: freefly.rs  lib.rs  producer.rs  projection.rs  render_view.rs
astraweave-camera/tests/: canonical_types.rs
astraweave-ecs/: Cargo.toml  README.md
astraweave-ecs/benches/: alloc_measure.rs  ecs_benchmarks.rs
astraweave-ecs/src/: archetype.rs  blob_vec.rs  command_buffer.rs  component_meta.rs  counting_alloc.rs  determinism_tests.rs  entity_allocator.rs  entity_allocator_kani.rs  events.rs  lib.rs  lib_new.rs  mutation_resistance_tests.rs  mutation_tests.rs  parallel.rs  sparse_set.rs  system_param.rs
astraweave-ecs/tests/: behavioral_correctness_tests.rs  coverage_booster_ecs.rs  full_pipeline_integration.rs  mutation_resistant_comprehensive_tests.rs  panic_safety_tests.rs  world_app_tests.rs
astraweave-fluids/: Cargo.toml  README.md
astraweave-fluids/benches/: fluid_baselines.rs  fluids_adversarial.rs  voxel_sparsity.rs
astraweave-fluids/shaders/: anisotropic.wgsl  fluid.wgsl  sdf_gen.wgsl  secondary.wgsl  ssfr_depth.wgsl  ssfr_shade.wgsl
astraweave-fluids/src/: boundary.rs  caustics.rs  emitter.rs  foam.rs  gpu_volume.rs  lib.rs  pcisph_system.rs  renderer.rs  research.rs  sdf.rs  simd_ops.rs  validation.rs  viscosity.rs  viscosity_gpu.rs  volume_grid.rs  warm_start.rs
astraweave-fluids/tests/: gpu_execution_tests.rs  mutation_resistant_comprehensive_tests.rs  sparse_lockstep_f3s.rs  voxel_water_f3.rs
astraweave-gameplay/: Cargo.toml  README.md
astraweave-gameplay/src/: cutscenes.rs  mutation_tests.rs  types.rs  weaving.rs
astraweave-physics/: Cargo.toml  README.md
astraweave-physics/benches/: alloc_measure.rs
astraweave-physics/src/: cloth.rs  destruction.rs  environment.rs  gravity.rs  lib.rs  projectile.rs  ragdoll.rs  vehicle.rs
astraweave-physics/tests/: coverage_boost_tests.rs  environment_tests.rs  mutation_resistant_comprehensive_tests.rs  physics_core_tests.rs
astraweave-profiling/: Cargo.toml
astraweave-profiling/benches/: profiling_adversarial.rs
astraweave-profiling/src/: lib.rs
astraweave-profiling/tests/: mutation_resistant_comprehensive_tests.rs
astraweave-render/: Cargo.toml  README.md
astraweave-render/benches/: alloc_measure.rs  camera_primitives_instancing.rs  gpu_memory_terrain_skinning_depth_overlay.rs
astraweave-render/examples/: depth_sample_capability_probe.rs  tonemap_probe.rs  water_budget_probe.rs
astraweave-render/shaders/: auto_exposure.wgsl  bindless_material.wgsl  bloom_downsample.wgsl  bloom_upsample.wgsl  brdf_common.wgsl  clipmap_terrain.wgsl  clustered_lighting.wgsl  compute_noise.wgsl  constants.wgsl  dof.wgsl  gpu_erosion.wgsl  grass_blade.wgsl  gtao.wgsl  gtao_blur.wgsl  hiz_generate.wgsl  hiz_pyramid.wgsl  ltc_area_lights.wgsl  motion_blur.wgsl  oit_wboit.wgsl  pbr.wgsl  pbr_terrain.wgsl  pbr_terrain_forward.wgsl  pbr_terrain_forward_notes.md  pbr_terrain_vs.wgsl  post_basic.wgsl  post_fx.wgsl  puddle_accumulation.wgsl  rain_splash.wgsl  shadow_csm.wgsl  shadow_point.wgsl  shadow_sampling.wgsl  snow_accumulation.wgsl  snow_footprint.wgsl  ssgi.wgsl  ssgi_bilateral_upsample.wgsl  ssgi_denoise.wgsl  ssr.wgsl  stochastic_tiling.wgsl  taa.wgsl  temporal_upscale.wgsl  (+6 more)
astraweave-render/src/: advanced_post.rs  atmosphere.rs  auto_exposure.rs  bind_group_cache.rs  bloom.rs  brdf_lut.rs  camera.rs  clipmap_terrain.rs  clustered.rs  clustered_forward.rs  clustered_megalights.rs  compute_noise.rs  culling.rs  culling_node.rs  deferred.rs  disney_material.rs  distance_field.rs  effects.rs  environment.rs  final_gather.rs  frame_graph.rs  god_rays.rs  gpu_erosion.rs  gpu_memory.rs  gpu_profiler.rs  graph.rs  grass_blade.rs  gtao.rs  hdr_pipeline.rs  hiz_pyramid.rs  ibl.rs  impostor_bake.rs  impostor_lod3.rs  impostor_pass.rs  instancing.rs  lib.rs  lod_generator.rs  ltc_area_lights.rs  lumen.rs  material.rs  (+52 more)
astraweave-render/tests/: behavioral_correctness_tests.rs  camera_conventions.rs  coverage_booster_render.rs  impostor_bake_pipeline.rs  impostor_lod3_pipeline.rs  impostor_pass_pipeline.rs  memory_safety_tests.rs  mutation_resistant_comprehensive_tests.rs  shader_validation.rs  terrain_splat_pipeline.rs  test_terrain_material.rs  wave2_asset_camera_instancing_biome_mat.rs  wave2_camera_decals_hdri_types_remediation.rs  wave2_camera_golden.rs  wave2_camera_remediation.rs  wave2_clustered_golden_projection_remediation.rs  wave2_clustered_transition_remediation.rs  wave2_culling_anim_misc_tests.rs  wave2_env_camera_material_tests.rs  wave2_gi_particles_deferred_remediation.rs  wave2_gpumem_transparency_audio_terrain_decals.rs  wave2_gpumem_transparency_water_msaa_remediation.rs  wave2_material_biome_advpost_error.rs  wave2_material_post_streaming_remediation.rs  wave2_mesh_golden.rs  wave2_mesh_instancing_biomedet_remediation.rs  wave2_primitives_mesh_ssao_error_tests.rs  wave2_ssao_mesh_water_vertcomp.rs  wave2_terrain_quad_registry_overlay_remediation.rs  wave3_mutation_remediation.rs
astraweave-water/: Cargo.toml
astraweave-water/benches/: water_query.rs
astraweave-water/src/: lib.rs  voxel.rs
crates/astraweave-alloc/: Cargo.toml
examples/cutscene_render_demo/: Cargo.toml
examples/ecs_ai_showcase/: Cargo.toml
examples/profiling_demo/: Cargo.toml
examples/weaving_playground/: Cargo.toml
net/aw-net-proto/: Cargo.toml
net/aw-net-server/: Cargo.toml
(+13464 files in other folders)
