[package]
name = "astraweave-asset"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "fs"] }
notify = "8"
walkdir = "2"
toml = "0.9"
ron = "0.11"
meshopt = "0.6"
bytemuck = { workspace = true }
tracing = { workspace = true }

# Optional: glTF parsing (CPU side) with KHR material extensions
gltf = { version = "1.4", optional = true, features = [
    "KHR_materials_transmission",
    "KHR_materials_ior",
    "KHR_materials_emissive_strength",
    "extensions",
] }

# Optional: Blender .blend file import via subprocess conversion
astraweave-blend = { path = "../crates/astraweave-blend", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tempfile = "3"
criterion = { workspace = true }

[features]
default = ["gltf"]
gltf = ["dep:gltf"]
blend = ["dep:astraweave-blend"]
