[package]
name = "astraweave-ecs"
version = "0.1.0"
edition = "2021"

# Allow cfg(kani) for Kani formal verification
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
# astraweave-profiling is non-optional because its counters module is the
# process-wide source of truth for allocation measurement. When no features are
# enabled, the only non-optional transitive dep is `anyhow`, which ecs already
# pulls in — so this adds zero new build cost.
astraweave-profiling = { path = "../astraweave-profiling" }
tracy-client = { version = "0.18", optional = true }
# Optional — only pulled in when `fast-alloc` is enabled. Allows CountingAlloc
# to forward to MiMalloc instead of the System allocator for the mimalloc
# experiment.
astraweave-alloc = { workspace = true, optional = true }

[features]
profiling = ["astraweave-profiling/profiling", "tracy-client", "tracy-client/enable"]
# `parallel` feature and the `ParallelSchedule` it enabled were removed
# 2026-04-18. See docs/audits/parallel_schedule_removal_2026-04-18.md.
# AstraWeave's ECS is deterministic single-threaded; parallelism lives at
# subsystem level (rayon in terrain/fluids, tokio in async I/O).
loom = []
# Enables `CountingAlloc` and cascades to astraweave-profiling's `alloc-counter`
# so that `FrameAllocStats` and `alloc_plot!` see the CountingAlloc's recorded
# allocations.
alloc-counter = ["astraweave-profiling/alloc-counter"]
# When enabled alongside `alloc-counter`, CountingAlloc's backing allocator is
# MiMalloc instead of `std::alloc::System`. Does nothing on its own (you still
# need `alloc-counter` to activate CountingAlloc).
fast-alloc = ["dep:astraweave-alloc", "astraweave-alloc/fast-alloc"]

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
criterion = { workspace = true }
proptest = "1.5"
test-strategy = "0.4"
loom = "0.7"  # Concurrency model checker for Phase 4.4

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "ecs_benchmarks"
harness = false
