[package]
name = "astraweave-fluids"
version = "0.1.0"
edition = "2021"

[features]
default = []
# ORPHANED by W.1 (2026-06-20): `simd_ops` — the sole consumer of these
# rayon-parallel helpers — was removed with the SPH solver core, and the
# `experimental` feature's gated modules (PcisphSystem, multi_phase, warm_start,
# particle_shifting, turbulence, viscosity_gpu) were removed entirely. This
# feature and the optional `rayon` dep below now gate nothing; retained because
# W.1 removed only the explicitly-ratified set (the `parallel`/`rayon` cleanup
# is the director's call).
parallel = ["dep:rayon"]
# NOTE (F.1): the former `serde` feature gated nothing — five modules had
# unconditional `use serde::` so --no-default-features could not compile.
# serde is now an unconditional dependency.

[[bench]]
name = "fluids_adversarial"
harness = false

[[bench]]
name = "fluid_baselines"
harness = false

[dependencies]
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
bitflags = { version = "2.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bincode = "1.3"
thiserror = "1.0"
rayon = { version = "1.10", optional = true }
toml = "0.8"

[dev-dependencies]
winit = { workspace = true }
pollster = { workspace = true }
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.10"

