[package]
name = "astraweave-gameplay"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
glam = { workspace = true }
rapier3d = { workspace = true }

astraweave-core = { path = "../astraweave-core" }
astraweave-physics = { path = "../astraweave-physics" }
astraweave-nav = { path = "../astraweave-nav" }
astraweave-ecs = { workspace = true }
astraweave-input = { path = "../astraweave-input" }
astraweave-scene = { path = "../astraweave-scene" }
# C.7.A (Unified Camera campaign): added to flow Cue::CameraTo data through
# the canonical `astraweave_cinematics::CameraKey` boundary inside
# `CutsceneState::tick`. First of two new dependency edges in the
# cinematics consolidation chapter; no circular risk (astraweave-cinematics
# has zero astraweave-* deps per C.7.0 audit §2.A).
astraweave-cinematics = { path = "../astraweave-cinematics" }
tracing = { workspace = true }

[dev-dependencies]
astraweave-asset = { path = "../astraweave-asset" }
criterion = { workspace = true }

[[bench]]
name = "combat_pipeline"
harness = false
