[package]
name = "astraweave-physics"
version = "0.1.0"
license.workspace = true
edition = "2021"

[features]
default = []
async-physics = ["rayon"]
profiling = ["astraweave-profiling/profiling", "tracy-client", "tracy-client/enable"]
ecs = ["astraweave-ecs", "astraweave-scene"]
# Pull in astraweave-profiling's alloc-counter for bench assertions. The dep is
# optional by default; this feature cascades `dep:astraweave-profiling` so the
# crate is only built when someone actually asks for counting. The bench-side
# global allocator installation uses a small ad-hoc wrapper (see
# `benches/alloc_measure.rs`) to avoid a runtime dep on astraweave-ecs.
alloc-counter = ["dep:astraweave-profiling", "astraweave-profiling/alloc-counter"]
# Bench-only: swap the inner allocator of the bench's BenchAlloc to MiMalloc.
# Does nothing to the library itself.
fast-alloc = ["dep:astraweave-alloc", "astraweave-alloc/fast-alloc"]

[dependencies]
anyhow = { workspace = true }
glam = { workspace = true }
rapier3d = { workspace = true }
rand = { workspace = true }
bitflags = "2"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
astraweave-profiling = { path = "../astraweave-profiling", optional = true }
tracy-client = { version = "0.18", optional = true }
rustc-hash = "2.0"  # Phase B optimization: FxHashMap provides better performance (3.77ms vs 5.61ms with Tracy)
astraweave-ecs = { path = "../astraweave-ecs", optional = true }
astraweave-scene = { path = "../astraweave-scene", optional = true }
astraweave-alloc = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "raycast"
harness = false

[[bench]]
name = "character_controller"
harness = false

[[bench]]
name = "rigid_body"
harness = false

[[bench]]
name = "physics_async"
harness = false
required-features = ["async-physics"]

[[bench]]
name = "cloth"
harness = false

[[bench]]
name = "vehicle"
harness = false

[[bench]]
name = "destruction"
harness = false

[[bench]]
name = "ragdoll"
harness = false

[[bench]]
name = "gravity"
harness = false

[[bench]]
name = "alloc_measure"
harness = false
required-features = ["alloc-counter"]
