[package]
name = "astraweave-render"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = ["postfx", "textures", "terrain-splat-arrays"]
postfx = []
gpu-tests = []
textures = ["image"]
skinning-cpu = []
skinning-gpu = []
assets = []
nanite = []
ibl = []
megalights = []  # MegaLights GPU light culling (Phase 1)
msaa = []  # MSAA anti-aliasing
gpu-particles = []  # GPU compute-based particle system
decals = []  # Screen-space decal system
deferred = []  # Deferred rendering pipeline
advanced-post = []  # Advanced post-processing (TAA, motion blur, DOF)
camera-relative = []  # Camera-relative rendering for large-world precision
terrain-splat-arrays = []  # Phase 2.2: 8-layer splat-array terrain pipeline (Issue #9 fix)
impostor-bake = []  # Phase 5.3: offline/lazy impostor atlas bake pipeline (Issue #8 fix)
impostor-bake-cli = ["impostor-bake", "gltf-assets", "textures", "dep:clap", "dep:pollster"]  # Phase 5.3 T2: CLI binary for baking atlases from glTF
gltf-assets = ["gltf", "assets"]
obj-assets = ["tobj", "assets"]
profiling = ["astraweave-profiling/profiling", "tracy-client", "tracy-client/enable"]
# Pull in astraweave-profiling's alloc-counter for bench assertions. Optional dep
# is only built when someone asks for counting.
alloc-counter = ["dep:astraweave-profiling", "astraweave-profiling/alloc-counter"]
# Bench-only allocator swap for the mimalloc experiment.
fast-alloc = ["dep:astraweave-alloc", "astraweave-alloc/fast-alloc"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
image = { version = "0.25", optional = true }
bytemuck = { workspace = true }
astraweave-core = { path = "../astraweave-core" }
astraweave-materials = { path = "../astraweave-materials" }
astraweave-cinematics = { path = "../astraweave-cinematics" }
astraweave-terrain = { path = "../astraweave-terrain" }
astraweave-profiling = { path = "../astraweave-profiling", optional = true }
astraweave-alloc = { workspace = true, optional = true }
tracy-client = { version = "0.18", optional = true }
log = "0.4"
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }
half = "2"
toml = { workspace = true }
gltf = { version = "1.4", optional = true, features = ["import"] }
tobj = { version = "4", optional = true }
astraweave-asset = { path = "../astraweave-asset" }
aw_asset_cli = { path = "../tools/aw_asset_cli" }
ktx2 = "0.4"
basis-universal = "0.3.1"
texture2ddecoder = "0.1"
serde = { workspace = true }
serde_json = "1"
rand = { workspace = true }
mikktspace = "0.3"
tokio = { version = "1", features = ["sync", "fs", "rt"] }
clap = { version = "4.5", features = ["derive"], optional = true }
pollster = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
pollster = { workspace = true }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
png = "0.18"
bytes = "1"
approx = "0.5"
naga = { version = "25.0.1", features = ["wgsl-in"] }
glob = "0.3"
image = "0.25"

[[bench]]
name = "alloc_measure"
harness = false
required-features = ["alloc-counter"]

[[bench]]
name = "mesh_optimization"
harness = false
required-features = ["textures"]

[[bench]]
name = "rendering_performance"
harness = false
required-features = ["textures"]

[[bench]]
name = "cluster_gpu_vs_cpu"
harness = false

[[bench]]
name = "post_processing"
harness = false

[[bench]]
name = "phase2_benches"
harness = false

[[bench]]
name = "ibl_deferred"
harness = false

[[bench]]
name = "gpu_particles_water"
harness = false

[[bench]]
name = "ssr_decals_weather"
harness = false

[[bench]]
name = "animation_skinning"
harness = false

[[bench]]
name = "culling_lod"
harness = false

[[bench]]
name = "nanite_shadow_csm"
harness = false

[[bin]]
name = "aw-impostor-bake"
path = "src/bin/aw_impostor_bake.rs"
required-features = ["impostor-bake-cli"]

[[bench]]
name = "texture_streaming_vxgi"
harness = false

[[bench]]
name = "clustered_megalights_residency"
harness = false

[[bench]]
name = "transparency_environment_msaa"
harness = false

[[bench]]
name = "camera_primitives_instancing"
harness = false

[[bench]]
name = "graph_mesh_material_texture"
harness = false

[[bench]]
name = "gpu_memory_terrain_skinning_depth_overlay"
harness = false

[[bench]]
name = "biome_transition"
harness = false