[package]
name = "astraweave-water"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Gameplay water-truth facade: the single logical owner of where water is, how deep, and how dense — queried by physics/AI/gameplay. CPU-resident and deterministic (engine fluids determinism carve-out, gate Q1)."

[features]
default = []
# NOTE (W.1, 2026-06-20): the `voxel` feature and its optional astraweave-fluids
# backend (impl WaterQuery for WaterVolumeGrid) were removed with the fluids
# voxel sim per the W.0 salvage list. AnalyticWater is the sole backend; the
# crate is once again a glam-only leaf below physics.

[dependencies]
glam = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "water_query"
harness = false
