[package]
name = "astraweave-alloc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Opt-in global allocator replacement (mimalloc) for AstraWeave binaries."

[dependencies]
# mimalloc is MIT-licensed, Microsoft-maintained, works on Windows/Linux/macOS
# without extra build dependencies. See the mimalloc-rs README for platform
# caveats. Pinned to the current 0.1.x minor line.
mimalloc = { version = "0.1", optional = true, default-features = false }

[features]
default = []
# Enables the mimalloc re-export and makes `setup_global_allocator!()` expand
# to a real `#[global_allocator]` static. Off by default — binaries opt in.
fast-alloc = ["dep:mimalloc"]

[lib]
name = "astraweave_alloc"
path = "src/lib.rs"
