[package]
name = "profiling_demo"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
astraweave-profiling.workspace = true
astraweave-ecs.workspace = true
astraweave-physics.workspace = true
astraweave-math.workspace = true
anyhow.workspace = true
glam.workspace = true
rayon = "1.10"
lazy_static = "1.5"
tracy-client = { version = "0.18", optional = true, default-features = false }

[features]
default = []
profiling = ["astraweave-profiling/profiling", "tracy-client", "tracy-client/enable"]
profiling-sampling = ["profiling", "astraweave-profiling/profiling-sampling", "tracy-client/sampling"]
profiling-system = ["profiling", "astraweave-profiling/profiling-system", "tracy-client/system-tracing"]
profiling-full = ["astraweave-profiling/profiling-full", "profiling", "profiling-sampling", "profiling-system"]
# Install `CountingAlloc` as the global allocator and emit per-frame alloc plots via
# astraweave-profiling. Combine with `profiling` to see the plots in Tracy.
alloc-counter = ["astraweave-ecs/alloc-counter", "astraweave-profiling/alloc-counter"]
