[package]
name = "weaving_playground"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
winit = { workspace = true }
wgpu  = { workspace = true }
glam  = { workspace = true }
pollster = { workspace = true }

astraweave-core = { path = "../../astraweave-core" }
astraweave-render = { path = "../../astraweave-render" }
# F.4.2: weave-impact accents reuse the fluids secondary-particle billboard
# machinery (SecondaryParticle + the additive accent render). The binary depends
# on BOTH render and fluids; render and fluids stay independent of each other.
astraweave-fluids = { path = "../../astraweave-fluids" }
astraweave-camera = { path = "../../astraweave-camera" }
astraweave-physics = { path = "../../astraweave-physics" }
astraweave-nav = { path = "../../astraweave-nav" }
astraweave-gameplay = { path = "../../astraweave-gameplay" }
astraweave-terrain = { path = "../../astraweave-terrain" }
