[package]
name = "aw-net-proto"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
postcard = { version = "1", features = ["alloc"] }
lz4_flex = "0.11"
thiserror = "2"
time = { version = "0.3", features = ["macros"] }
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "proto_bench"
harness = false