[package]
name = "aw-net-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
axum = "0.8"
hyper = { version = "1", features = ["http1", "server"] }
tokio-tungstenite = "0.28"
tungstenite = "0.28"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["macros"] }
sled = "0.34"
postcard = { version = "1", features = ["alloc"] }
lz4_flex = "0.11"
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"
aw-net-proto = { path = "../aw-net-proto" }

[dev-dependencies]
tempfile = "3"
# TLS test-client plumbing for the family5 wss:// signature-path tests. Versions
# mirror the normal deps EXACTLY (tokio-rustls 0.25 / rustls 0.22) so there is no
# second rustls in the graph. rcgen generates an ephemeral self-signed cert at
# test time (the committed net/certs/dev/*.pem are placeholders, so the server's
# cert loader rejects them); its `ring` backend matches the server's rustls
# crypto provider. The wss:// client uses a permissive cert verifier (see the
# test), so the generated cert's SAN/CN is irrelevant — these tests validate the
# HMAC SIGNATURE path over TLS, not TLS certificate validation. (rustls-pemfile
# is NOT needed as a dev-dep: rcgen emits PEM and only the server parses it.)
tokio-rustls = "0.25"
rustls = "0.22"
rcgen = "0.14"