[package]
name = "aw_editor"
version = "0.1.0"
edition = "2021"
license = "MIT"

# unwrap_used lint is too strict for test code - tests use unwrap() extensively for clarity
# We only enforce it via explicit code review rather than clippy
[lints.clippy]
unwrap_used = "allow"

[features]
# `fast-alloc` is on by default per the 2026-04-17 mimalloc experiment. Opt out
# with `--no-default-features --features editor-core,impostor-bake` if the
# platform default allocator is required (e.g. profiling a heap leak with a
# platform-specific tool).
default = ["editor-core", "impostor-bake", "fast-alloc", "terrain-splat-arrays"]
editor-core = []
editor-graphs = ["editor-core"]
editor-materials = ["editor-core"]
editor-terrain = ["editor-core"]
editor-nav = ["editor-core"]
editor-sim = ["editor-core"]
editor-full = ["editor-graphs", "editor-materials", "editor-terrain", "editor-nav", "editor-sim"]
profiling = ["astraweave-profiling/profiling"]
# Replace the global allocator with mimalloc. Off by default.
fast-alloc = ["dep:astraweave-alloc", "astraweave-alloc/fast-alloc"]
kittest = ["dep:egui_kittest"]
# Phase 2.2: enable the 8-layer splat-array terrain material pipeline.
terrain-splat-arrays = ["astraweave-render/terrain-splat-arrays"]
# Phase 5.3 T7: enable the LOD3 impostor bake / draw pipeline. Flipped into
# `default` in stage 3d (April 2026): the new `ImpostorPass` path is now the
# only LOD3 scatter renderer; disabling this feature via `--no-default-features`
# gives graceful LOD0/1/2 degradation (no LOD3 billboards).
impostor-bake = ["astraweave-render/impostor-bake"]

[dependencies]
eframe = { workspace = true, features = ["wgpu"] }
egui = { workspace = true }
egui-wgpu = "0.32.0"
egui_dock = { workspace = true }
wgpu = { workspace = true }
raw-window-handle = "0.6"
bytemuck = { version = "1.19", features = ["derive"] }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = "0.8"
toml = { workspace = true }
notify = "8"
anyhow = { workspace = true }
thiserror = { workspace = true }
image = "0.25"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
sha2 = { workspace = true }
winit = { workspace = true }
gltf = { version = "1.4", features = ["import", "extensions"] }
glam = { workspace = true }
rand = "0.8"
rayon = "1.11"
rfd = "0.15"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
pollster = "0.4"
astract = { path = "../../crates/astract" }
astraweave-core = { path = "../../astraweave-core" }
astraweave-ecs = { path = "../../astraweave-ecs" }
astraweave-profiling = { path = "../../astraweave-profiling" }
# Optional — only pulled in when `fast-alloc` is enabled.
astraweave-alloc = { workspace = true, optional = true }
astraweave-render = { path = "../../astraweave-render", features = ["gltf-assets", "textures"] }
astraweave-camera = { path = "../../astraweave-camera" }
# C.7.C (Unified Camera campaign): added so the editor's CinematicsPanel
# operates on canonical `astraweave_cinematics::CameraKey` directly, retiring
# the parallel `CameraKeyframe` type. Third and final new dependency edge in
# the cinematics consolidation chapter (gameplay C.7.A, demo C.7.B, editor
# C.7.C). No circular risk (astraweave-cinematics has zero astraweave-* deps).
astraweave-cinematics = { path = "../../astraweave-cinematics" }
astraweave-author = { path = "../../astraweave-author" }
astraweave-asset = { path = "../../astraweave-asset", features = ["blend"] }
astraweave-blend = { path = "../../crates/astraweave-blend" }
astraweave-audio = { path = "../../astraweave-audio" }
astraweave-behavior = { path = "../../astraweave-behavior" }
astraweave-dialogue = { path = "../../astraweave-dialogue" }
astraweave-quests = { path = "../../astraweave-quests" }
astraweave-nav = { path = "../../astraweave-nav" }
astraweave-observability = { path = "../../astraweave-observability" }
astraweave-physics = { path = "../../astraweave-physics" }
astraweave-security = { path = "../../astraweave-security" }
astraweave-terrain = { path = "../../astraweave-terrain" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
zstd = "0.13"
lz4_flex = "0.11"
crc32fast = "1.4"
# astraweave-asset-pipeline: dep removed 2026-06-30 (R-series M2/E4, relabel-and-defer) —
# in-design / caller-less crate the editor never referenced (zero `use`). Re-add only when
# the post-v1.0 cook-path build wires it to a live editor-import caller. See
# docs/audits/e4_cook_path_recon_2026-06.md.
tokio = { workspace = true }
mp4 = "0.14"
openh264 = "0.6"
egui_kittest = { version = "0.32", optional = true }
[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
# Editor-Engine Render Parity harness (tests/render_parity_harness.rs) decodes
# Rgba16Float bytes for linear-space SAD attribution.
half = "2"
# C.3.A byte-equivalence closure proof + C.3.B.1 wrapper-preservation:
# parity harness exercises Renderer::update_view directly. The aw_editor lib
# itself also depends on astraweave-camera (above) post-C.3.B.1 migration of
# EngineRenderAdapter; this dev-dep entry is now redundant with the lib dep
# but kept for explicit dependency declaration discipline.

[[bench]]
name = "editor_performance"
harness = false
path = "benches/editor_performance.rs"

[lib]
name = "aw_editor_lib"
path = "src/lib.rs"

[[bin]]
name = "aw_editor"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "aw_game_runtime"
path = "src/bin/aw_game_runtime.rs"
test = false
bench = false
